Enhance R Markdown with image and leaflet updates
Updated the R Markdown document to include a PNG image and adjusted the leaflet map code.

--- a/index.Rmd
+++ b/index.Rmd
@@ -26,6 +26,11 @@ You can also embed plots, for example:
 ```{r pressure, echo=FALSE}
 plot(pressure)
 
+library("png")
+pp <- readPNG("mapa1.png")
+plot.new() 
+rasterImage(pp,0,0,1,1)
+
 # Load libraries
 library(leaflet)
 
@@ -59,3 +64,4 @@ m
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
